refactor(java): poda reversa do galho 17 — graceful shutdown e memory/GC viram callouts; Actuator aponta observabilidade ao G17